# prism

./: .gitignore  CMakeLists.txt  README.md
include/core/: hook.h  ring_buffer.h  telemetry.h  trace_io.h
include/tui/: app.h
pragyan_contri/: instrumentation.cpp  instrumentation.h  main.cpp  ring_buffer.h  tui.cpp  tui.h  types.h
src/: main.cpp
src/core/: hook.cpp  trace_io.cpp
src/tui/: app.cpp
